# llm-NOOBservability

./: .gitignore  LICENSE  README.md  flake.nix  module.nix  pyproject.toml
docs/: api.md  design.md  how-it-works.md
examples/: flake.nix
src/noobservability/: __init__.py  agent.py  api.py  cli.py  config.py  grounding.py  ollama.py  sources.py
src/noobservability/static/: app.js  index.html  style.css
